--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
-    "material-ui": "^1.0.0-beta.33",
+    "material-ui": "^1.0.0-beta.34",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.2.2"
   },
   "scripts": {
+    "s": "simple-pack dev",
     "start": "simple-pack dev",
     "prebuild": "npx rimraf build/*",
     "build": "simple-pack prod",
